apps/pihole/pihole-ingress.yaml
## Nginx Ingress
## Follow https://devopscube.com/setup-ingress-kubernetes-nginx-controller/

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole
  namespace: dns
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  # Use the host you used in your kubernetes Ingress Configurations
  - host: pihole.unifiedconsulting.net
    http:
      paths:
      - backend:
          service:
            name: pihole
            port:
              number: 80
        path: /admin
        pathType: Prefix
  tls:
  - hosts:
    - pihole.unifiedconsulting.net
    secretName: pihole-secret
